# plr_meson

./: README.md  _meson_options.txt_postgres_root_additional_plr_option.txt  archive_script.sh  build_script.sh  init.sh  libR.pc  libpq.pc  meson.build  server_version_num.sh  test_script.sh
.github/workflows/: build.yml  buildPLR.yml  build_mingw.yml
sql/: plr.sql
